[project]
name = "simpler-env"
version = "0.1.0"
description = ""
authors = [{ name = "Hangxing" }]
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "numpy (>=1.24.4)",
    "decorator (>=4.4.2,<4.5.0)",
    "mani-skill2-real2sim",
    "setuptools>=80.9.0",
]

[dependency-groups]
test = ["ipykernel>=6.29.5,<7"]
dev = [
    "einops>=0.8.1",
    "ipykernel>=6.29.5,<7",
    "ipywidgets>=8.1.5,<9",
    "mediapy>=1.2.4",
    "moviepy>=1.0.3",
    "p-tqdm>=1.4.2",
    "plotly>=6.1.2",
    "seaborn>=0.13.2",
]

[tool.isort]
profile = "black"
line_length = 120
force_sort_within_sections = "True"
order_by_type = "False"

[tool.uv]
default-groups = ["test", "dev"]

[tool.uv.sources]
mani-skill2-real2sim = { git = "https://github.com/hspk/ManiSkill2_real2sim" }
